# Prophyan

./: .gitignore  .gitlab-ci.yml  graph.js  hyouron.js  index.html  monogatari_1.md  monogatari_2.md  monogatari_3.md  recursive_ctx.html  recursive_ctx.js  test.html  test_hyouron.js
gyakusan/: .gitignore  pt1.py  pt2-2.py  pt2-nb.py  pt2-nbnr.py  pt2.exp.py  pt2.py  pt3-2.py  pt3-l.exp.py  pt3-l.py  pt3-ls.py  pt3-lsm.py  pt3.py  pt4.py  yureugo.py
happy/: build.eng.sh  build.sh  command.txt  css.css  css.new.css  happy.html  happy.md  index.html  index.jp.html  matagaki.compact.html  matagaki.compact.md  matagaki.eng.2023.html  matagaki.eng.2023.md  matagaki.eng.html  matagaki.eng.limittt.md  matagaki.eng.md  matagaki.eng.old.dl.md  matagaki.jp.html  matagaki.jp.md  matagaki.md  matagaki.torima.md  package.json  server.sh  talks.md  watch.eng.sh  watch.sh
haskell/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
osos/: memo.txt
reflex/: .gitignore  Dockerfile  bashrc  build-image.sh  build-js.sh  build-src.sh  default.nix  first-time-build-js.sh  memo.txt  run-app.sh  run-ghc.sh  shell.nix  shell.sh  ssh-and-env.sh  ssh.sh  startup.sh
so-no-go/: meta.js  tukuro.js  tukuru.js
so-no-iti/: exploit_me.js  hyouron.js  hyouron_bc.js  info_field.js  monogatari_0.md  monogatari_2.md  monogatari_3.md  monogatari_4.md  nami.js  recursive_ctx.js
so-no-ni/: concrete.js  field.js  field_giji.js  index.css  index.html  logic.js
yumegame/yumeserver/: yumeserver.cabal
yumegame/yumeserver/app/: Main.hs
yumegame/yumeserver/src/: GameData.hs  LibMain.hs
(+46 files in other folders)
